[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/shaders/color_invert.tres" type="Material" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Level1.gd" type="Script" id=3]
[ext_resource path="res://scenes/Totem.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/font48.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sounds/totem.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 488.29, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.8552, 316.358 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 451.467, 240.774 )

[node name="Level1" type="Node2D"]
script = ExtResource( 3 )

[node name="Walls" type="Node2D" parent="."]
visible = false

[node name="Area2D" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D"]
position = Vector2( 479.97, 5.23116 )
shape = SubResource( 1 )

[node name="Area2D2" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D2"]
position = Vector2( 480.763, 550.238 )
shape = SubResource( 1 )

[node name="Area2D3" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D3"]
position = Vector2( -7.0888, 261.392 )
shape = SubResource( 2 )

[node name="Area2D4" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Area2D4"]
position = Vector2( 971.967, 272.493 )
shape = SubResource( 2 )

[node name="Objects" type="YSort" parent="."]

[node name="Player1" parent="Objects" instance=ExtResource( 2 )]
visible = false
collision_layer = 3

[node name="Player2" parent="Objects" instance=ExtResource( 2 )]
visible = false
collision_layer = 3

[node name="Player3" parent="Objects" instance=ExtResource( 2 )]
visible = false
collision_layer = 3

[node name="Player4" parent="Objects" instance=ExtResource( 2 )]
visible = false
collision_layer = 3

[node name="Totem1" parent="Objects" instance=ExtResource( 4 )]
position = Vector2( 240, 135 )
collision_layer = 2

[node name="Totem2" parent="Objects" instance=ExtResource( 4 )]
position = Vector2( 720, 135 )
collision_layer = 2

[node name="Totem3" parent="Objects" instance=ExtResource( 4 )]
position = Vector2( 240, 405 )
collision_layer = 2

[node name="Totem4" parent="Objects" instance=ExtResource( 4 )]
position = Vector2( 720, 405 )
collision_layer = 2

[node name="Totem5" parent="Objects" instance=ExtResource( 4 )]
position = Vector2( 480, 270 )
collision_layer = 2

[node name="MoveableArea" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveableArea"]
position = Vector2( 476.885, 276.365 )
shape = SubResource( 3 )

[node name="UI" type="VBoxContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI"]
margin_left = 460.0
margin_top = 470.0
margin_right = 500.0
margin_bottom = 496.0
size_flags_horizontal = 4
size_flags_vertical = 10
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="GridContainer" parent="UI"]
margin_top = 500.0
margin_right = 960.0
margin_bottom = 526.0
size_flags_horizontal = 3
size_flags_vertical = 8
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container1" type="HBoxContainer" parent="UI/Scores"]
margin_left = 48.0
margin_right = 188.0
margin_bottom = 26.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Label" type="Label" parent="UI/Scores/Container1"]
margin_right = 124.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player One: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePlayer1" type="Label" parent="UI/Scores/Container1"]
margin_left = 128.0
margin_right = 140.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container2" type="HBoxContainer" parent="UI/Scores"]
margin_left = 287.0
margin_right = 431.0
margin_bottom = 26.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Label" type="Label" parent="UI/Scores/Container2"]
margin_right = 128.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Two: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePlayer2" type="Label" parent="UI/Scores/Container2"]
margin_left = 132.0
margin_right = 144.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container3" type="HBoxContainer" parent="UI/Scores"]
margin_left = 519.0
margin_right = 681.0
margin_bottom = 26.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Label" type="Label" parent="UI/Scores/Container3"]
margin_right = 146.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Three: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePlayer3" type="Label" parent="UI/Scores/Container3"]
margin_left = 150.0
margin_right = 162.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container4" type="HBoxContainer" parent="UI/Scores"]
margin_left = 766.0
margin_right = 916.0
margin_bottom = 26.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Label" type="Label" parent="UI/Scores/Container4"]
margin_right = 134.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Four: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePlayer4" type="Label" parent="UI/Scores/Container4"]
margin_left = 138.0
margin_right = 150.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI"]
margin_top = 530.0
margin_right = 960.0
margin_bottom = 540.0
custom_constants/margin_bottom = 10

[node name="TimerTimeLeft" type="Timer" parent="."]

[node name="Smokes" type="Node2D" parent="."]

[node name="AudioTotem" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ColorSwitch" type="ColorRect" parent="."]
material = ExtResource( 1 )
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="player_die" from="Objects/Player1" to="." method="_on_player_die"]
[connection signal="smoke" from="Objects/Player1" to="." method="_on_smoke"]
[connection signal="player_die" from="Objects/Player2" to="." method="_on_player_die"]
[connection signal="smoke" from="Objects/Player2" to="." method="_on_smoke"]
[connection signal="player_die" from="Objects/Player3" to="." method="_on_player_die"]
[connection signal="smoke" from="Objects/Player3" to="." method="_on_smoke"]
[connection signal="player_die" from="Objects/Player4" to="." method="_on_player_die"]
[connection signal="smoke" from="Objects/Player4" to="." method="_on_smoke"]
[connection signal="on_totem_touched" from="Objects/Totem1" to="." method="_on_totem_touched"]
[connection signal="on_totem_touched" from="Objects/Totem2" to="." method="_on_totem_touched"]
[connection signal="on_totem_touched" from="Objects/Totem3" to="." method="_on_totem_touched"]
[connection signal="on_totem_touched" from="Objects/Totem4" to="." method="_on_totem_touched"]
[connection signal="on_totem_touched" from="Objects/Totem5" to="." method="_on_totem_touched"]
[connection signal="timeout" from="TimerTimeLeft" to="." method="_on_TimerTimeLeft_timeout"]
